# morpholoPy

./: .gitignore  LICENSE  README.md  pyproject.toml
manuscript/src/: manuscript_figures.py
surfacetools/: image_processing.py  periodicfeatures.py  roughness_params.py  surface_generators.py
test_cases/chevron/src/: chevron.py
test_cases/experimental_surface_images/cnc-poegma_biaxial_nanowrinkled/: run.sh
test_cases/experimental_surface_images/cnc-poegma_electrospun_mats/: run.sh
test_cases/experimental_surface_images/cnc-poegma_uniaxial_nanowrinkled/: run.sh
test_cases/experimental_surface_images/cnc-xg_biaxial_nanowrinkled/: run.sh
test_cases/experimental_surface_images/cnc_emulsion_bubbles/: run.sh
test_cases/experimental_surface_images/lysozyme_afm/: summary.txt  surf_rough_summary_lyso_dia_nonso0001.txt  surf_rough_summary_lyso_nondi_nonso0003.txt  surf_rough_summary_lyso_nondia_so0001.txt
test_cases/kdf_uniaxial_20um/images/: kdf_uniaxial_20um.tif
test_cases/lyso_afm/src/: surface_roughness.py
test_cases/synthetic_images/egg_carton/: surf_rough_params_summary_morpholoPy.txt
test_cases/vertical_lines/src/: verticalLines.py
tests/chevron/: sandbox.ipynb
tests/chevron/src/: _wrinklelib.py  chevron.py  visualizeImage.py
tests/emulsion_bubbles/src/: characteristic_length.py  visualizeImage.py  wrinkleAnalysis.py
tests/fragmented_jigsaw/src/: frag_jigsaw.py
tests/jigsaw/src/: jigsaw.py
tests/kdf_biaxial_20um/src/: characteristic_length.py  wrinkleAnalysis.py
tests/kdf_uniaxial_20um/src/: _wrinklelib.py  characteristic_length.py  (+2 more)
(+38 files in other folders)
