[project]
name = "surfacetools"
version = "0.1.0"
description = "A toolkit for surface analysis"
authors = [
    { name = "Andre Guerra", email = "andreguerra@cornell.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["surfacetools"]

